--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,21 @@
 {
-  "firebase": "reactfb",
-  "public": "dist",
-  "ignore": [
-    "firebase.json",
-    "**/.*",
-    "**/node_modules/**",
-    "**/bower_components/**"
-  ]
+    "firebase": "reactfb",
+    "public": "dist",
+    "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**",
+        "**/bower_components/**"
+    ],
+    "headers": [
+        {
+            "source": "**/*.@(html|js)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "max-age=31536000, public"
+                }
+            ]
+        }
+    ]
 }
