--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-load-plugins": "^0.8.1",
     "gulp-minify-html": "^0.1.8",
     "gulp-plumber": "^0.6.6",
+    "gulp-reactify": "^3.0.1",
     "gulp-size": "^1.2.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
