--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tudo",
+  "name": "react-firebase",
   "version": "1.0.0",
   "author": "Toby Steward <mail@tobysteward.com>",
   "description": "ReactJS Tutorial with Firebase",
